--- a/lab2.html
+++ b/lab2.html
@@ -63,9 +63,10 @@
 4 Посилання на Google диск для перегляду результату <p>4. <a href="https://drive.google.com/file/d/1x1XIBBv5u6d7UAL_nrhyblgTWA-sQomO/view?usp=sharing">Посилання на Гугл диск</a></p>
 5. OneDrive для перегляду результату <p>5. <a href="https://pnpu-my.sharepoint.com/:x:/g/personal/antypenko_vo_pdpu_edu_ua/EUqPyMdcedBOkZViQjPNCL4B-7dpOBfipguaAum-2ZKwPw?e=imOsgn">Посилання на OneDrive</a></p>
 6.1. Рідний формат для редактору Microsoft Office.
-<p>6.1 <a href="lab2.xlsx">Формат Microsoft (*.docx)</a></p>
+<p>6.1 <a href="lab2.xlsx">Формат Microsoft (*.xls
+ x)</a></p>
 6.2. Рідний формат для редактору Libre (Open) Office.
-<p>6.2 <a href="lab2.odt">Формат Open Office (*.odt)</a></p>
+<p>6.2 <a href="lab2.ods">Формат Open Office (*.ods)</a></p>
 
    </div>
    <div id="sidebar">
