--- a/control.html
+++ b/control.html
@@ -55,7 +55,7 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізики-математики"</div>
   <div id="content">
-<h2>звіт до контрольноїроботи №1. Тема – Текстовий процесор. Формування за зразком</h2> 
+<h2>звіт до контрольноїроботи . Тема – Текстовий процесор. Формування за зразком</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="control.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
@@ -77,6 +77,7 @@
     <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Google форма-опитування</a></p>
    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Google форма-тестування</a></p>
    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
+    <p><a href="lab6.html">звіт до контрольних робіт</a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізики-математики"</div>
