--- a/control.html
+++ b/control.html
@@ -55,7 +55,7 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізики-математики"</div>
   <div id="content">
-<h2>звіт до контрольної роботи №1</h2> 
+<h2>звіт до контрольної роботи №1"Текстовий процесор"</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="control.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
