--- a/lab3.html
+++ b/lab3.html
@@ -66,7 +66,16 @@
 <p>6.1 <a href="lab3-1.xlsx">Формат Microsoft (*.xlsx)</a></p>
 6.2. Рідний формат для редактору Libre (Open) Office.
 <p>6.2 <a href="lab3-1.ods">Формат Open Office (*.ods)</a></p>
-
+ 1. Номер і тема лабораторної роботи
+<h2>звіт до лабораторної роботи №3-2. Табличний процесор. Адресація. Арифметичні операції.</h2>
+3. iframe з результатом у pdf або html форматі
+<p>3. <iframe src="lab3-2.pdf" width="500" height="700"></iframe></p>
+4 Посилання на Google диск для перегляду результату <p>4. <a href="https://drive.google.com/file/d/1gPbJdztDh629yLb5FX1IF3s0lVH2hdLU/view?usp=sharing">Посилання на Гугл диск</a></p>
+5. OneDrive для перегляду результату <p>5. <a href="https://pnpu-my.sharepoint.com/:x:/g/personal/antypenko_vo_pdpu_edu_ua/EWbFyg65HNxDoNhM4EXaGjQBMgsmKsG0W9alyNGpupgyAQ?e=ehGf1v">Посилання на OneDrive</a></p>
+6.1. Рідний формат для редактору Microsoft Office.
+<p>6.1 <a href="lab3-2.xlsx">Формат Microsoft (*.xlsx)</a></p>
+6.2. Рідний формат для редактору Libre (Open) Office.
+<p>6.2 <a href="lab3-2.ods">Формат Open Office (*.ods)</a></p>
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
