--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
     <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Табличний процесор. Основи.</a></p>
     <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Табличний процесор</a></p>
-    <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Google форма-опитування</a></p>
+    <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Абсолютна адресая. Графки.</a></p>
    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Google форма-тестування</a></p>
    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
    <p><a href="control.html">звіт до контрольних робіт</a></p>  
