--- a/lab5.html
+++ b/lab5.html
@@ -43,7 +43,7 @@
     <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Табличний процесор.</a></p>
     <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Абсолютна адресая. Графки.</a></p>
    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Презентація.</a></p>
-   <p><a href="control.html">звіт до контрольних робіт</a></p>
+   <p><a href="control.html">Звіт до контрольних робіт.</a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізики-математики"</div>
