--- a/lab3.html
+++ b/lab3.html
@@ -79,13 +79,12 @@
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
-    <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
+    <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор.</a></p>
     <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Табличний процесор. Основи.</a></p>
-    <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Табличний процесор</a></p>
+    <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Табличний процесор.</a></p>
     <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Абсолютна адресая. Графки.</a></p>
-   <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Google форма-тестування</a></p>
-   <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
-    <p><a href="control.html">звіт до контрольних робіт</a></p>
+   <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Презентація.</a></p>
+   <p><a href="control.html">Звіт до контрольних робіт.</a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізики-математики"</div>
