--- a/lab5.html
+++ b/lab5.html
@@ -58,8 +58,8 @@
     <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізики-математики"</h2>
   1. Номер і тема лабораторної роботи
 <h2>звіт до лабораторної роботи №5. Презентація.</h2>
-3. iframe з результатом у pptx або html форматі
-<p>3. <iframe src="lab5.pptx" width="500" height="700"></iframe></p>
+3. iframe з результатом у pdf або html форматі
+<p>3. <iframe src="lab5.pdf" width="500" height="700"></iframe></p>
 4 Посилання на Google диск для перегляду результату <p>4. <a href="https://drive.google.com/file/d/1Rixxo9ukztPXoDYYJoodQ7ecJDpx8yLJ/view?usp=sharing">Посилання на Гугл диск</a></p>
 5. OneDrive для перегляду результату <p>5. <a href="https://pnpu-my.sharepoint.com/:f:/g/personal/antypenko_vo_pdpu_edu_ua/Eqn2sCfCrIlKo5oYmOyVIV8Bt8XicPERHm4QzP8Tk73P3w?e=TmOwiJ">Посилання на OneDrive</a></p>
 6.1. Рідний формат для редактору Microsoft Office.
