--- a/lab4.html
+++ b/lab4.html
@@ -60,7 +60,7 @@
 <h2>звіт до лабораторної роботи №4. Абсолютна адресая. Графки.</h2>
 3. iframe з результатом у pdf або html форматі
 <p>3. <iframe src="lab4.pdf" width="500" height="700"></iframe></p>
-4 Посилання на Google диск для перегляду результату <p>4. <a href="https://drive.google.com/drive/u/0/folders/1LU37Pi6Sf4lgmBJeW-2RG_xjtdnfFBL7">Посилання на Гугл диск</a></p>
+4 Посилання на Google диск для перегляду результату <p>4. <a href="https://drive.google.com/file/d/12zGGl-pIL7vKgH2Vg4XPbOkDlVgxOlj7/view?usp=sharing">Посилання на Гугл диск</a></p>
 5. OneDrive для перегляду результату <p>5. <a href="https://pnpu-my.sharepoint.com/:x:/g/personal/antypenko_vo_pdpu_edu_ua/EZqEm9wkKDBFsOF0RFNHuPYBuzvp0mKB0OaLUpLkY-iM3g?e=Q7ZJQe">Посилання на OneDrive</a></p>
 6.1. Рідний формат для редактору Microsoft Office.
 <p>6.1 <a href="lab4.xlsx">Формат Microsoft (*.xlsx)</a></p>
